songbird/src/styles/components/_song.scss
.song {
  display: grid;
  grid-template-columns: 150px 1fr;
  grid-template-rows: auto;
  gap: var(--spacer-400);
  grid-template-areas: "cover cover" "title title" "player player";
  border: 5px solid var(--clr-accent);
  padding: var(--spacer-400);
  align-items: start;

  @media (min-width: 560px) {
    justify-items: start;
    grid-template-areas: "cover game-title" "cover song-title" "cover player" "cover .";
  }

  &--full {
    grid-template-areas: "cover cover" "game-title game-title" "song-title song-title""player player" "description description";

    @media screen and (min-width: 1080px) {
      grid-template-areas:
        "cover game-title"
        "cover song-title"
        "cover player"
        "cover ."
        "description description";
    }
  }
}

.song__cover {
  display: flex;
  width: 150px;
  height: 150px;
  grid-area: cover;
  border: 1px solid transparent;

  &--question {
    object-fit: contain;
  }

  &--with-border {
    object-fit: cover;
    border-image: url('/src/icons/border.svg') 2 / 10px / 9px stretch;
  }
}

.song__game-title {
  margin: 0;
  grid-area: game-title;
  font-family: var(--ff-title);
  font-size: var(--fs-600);
  text-transform: uppercase;
  font-weight: normal;
  border-bottom: 2px solid var(--clr-border)
}

.song__song-title {
  margin: 0;
  min-height: calc(var(--fs-500) * var(--lh-default));
  grid-area: song-title
}

.song__player {
  border: 4px solid var(--clr-accent);
  grid-area: player;
  width: 100%;

  //no-inspection
  &::-webkit-media-controls-panel {
    background-color: white;
    font: inherit;

  }
}

.song__description {
  display: none;
  margin: 0;
  grid-area: description;
  font-size: var(--fs-400);

  &--show {
    display: block;
  }
}

